Added about page

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,4 +3,9 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Fecha y Hora : <span>@DateTime.UtcNow</span></p>
+<h1>We're change the world with technology</h1>
+<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and
+    add your own fullscreen background photo to make it your own.</p>
+<p class="lead">
+    <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+</p>
