--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -1,13 +1,13 @@
 @model IEnumerable<SchoolManagementApp.MVC.Data.Course>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Courses";
 }
 
-<h1>Index</h1>
+<h1>Courses</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success">+ Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Credits)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a  class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+                <a  class="btn btn-primary"asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a  class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
