Imrpoved the views

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Classes"
-                                asp-action="Index">Class Management</a>
+                                asp-action="Index">Classes</a>
                             </li>
                         }
 
